--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "api-minangitcamp",
-  "version": "0.0.0",
+  "name": "boilerplate-express-with-mongoose-and-passport",
+  "version": "0.0.1",
+  "description": "Just Boilerplate",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
+  "author": "masb0ymas",
+  "license": "MIT",
   "dependencies": {
     "@hapi/joi": "^15.1.0",
     "bcrypt": "^3.0.6",
@@ -23,6 +26,6 @@
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.4"
   }
 }
