--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "handlebars": "^4.1.2",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
