--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "description": "Just Boilerplate",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon --exec babel-node ./src/bin/server.js",
+    "build": "babel src --out-dir dist && cp -r ./src/views ./dist/views",
+    "serve": "node ./dist/bin/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "masb0ymas",
   "license": "MIT",
   "dependencies": {
-    "@hapi/joi": "^15.1.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.0",
-    "handlebars": "^4.1.2",
+    "handlebars": "^4.4.5",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
@@ -29,5 +32,14 @@
     "passport-local": "^1.0.0",
     "pug": "^2.0.4",
     "yup": "^0.27.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.7.4",
+    "@babel/core": "^7.7.4",
+    "@babel/node": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.4",
+    "@babel/preset-env": "^7.7.4",
+    "@babel/runtime": "^7.7.4",
+    "nodemon": "^2.0.1"
   }
 }
