--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "handlebars": "^4.4.5",
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "mongoose": "^5.6.9",
     "morgan": "~1.9.0",
@@ -31,6 +32,7 @@
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.4",
+    "uno-api": "^1.1.0",
     "yup": "^0.27.0"
   },
   "devDependencies": {
