fix: package typescript

--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
-  "name": "boilerplate-express-with-mongoose-and-passport",
+  "name": "express-mongoose-typescript",
   "version": "0.0.1",
   "description": "Just Boilerplate",
   "private": true,
   "scripts": {
-    "start": "nodemon --exec babel-node ./src/bin/server.js",
-    "build": "babel src --out-dir dist",
-    "serve": "NODE_ENV=production node ./dist/bin/server.js",
+    "start": "npm run dev",
+    "dev": "nodemon ./src/bin/server.ts",
+    "start:babel": "nodemon --exec babel-node --extensions \".ts\" ./src/bin/server.ts",
+    "lint": "npx eslint '*/**/*.{js,jsx,ts,tsx}' --quiet --fix",
+    "refresh:env-jwt": "node ./src/scripts/generateEnvJWT.ts",
+    "clean": "rm -rf ./dist",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "npm run type-check -- --watch",
+    "before-build": "yarn && npm run lint && npm run type-check && npm run clean",
+    "build": "npm run before-build && tsc -p .",
+    "build:babel": "npm run before-build && babel src --out-dir dist --extensions \".ts\",\".js\"",
+    "serve:staging": "NODE_ENV=staging node ./dist/bin/server.js",
+    "serve:production": "NODE_ENV=production node ./dist/bin/server.js",
+    "db:migrate": "npx sequelize-cli db:migrate",
+    "db:migrate:fresh": "npx sequelize-cli db:migrate:undo:all && npm run db:migrate",
+    "db:seed": "npx sequelize-cli db:seed:all",
+    "db:drop": "npx sequelize-cli db:drop",
+    "db:reset": "npm run db:drop && npx sequelize-cli db:create && npm run db:migrate && npm run db:seed",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "masb0ymas",
@@ -14,43 +29,88 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.5",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
+    "date-fns": "^2.15.0",
     "debug": "~4.1.1",
     "dotenv": "^8.2.0",
-    "express": "~4.17.1",
+    "express": "^4.17.1",
+    "express-async-handler": "^1.1.4",
+    "googleapis": "^59.0.0",
     "handlebars": "^4.7.6",
+    "helmet": "^4.0.0",
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "moment": "^2.24.0",
+    "mariadb": "^2.2.0",
     "mongoose": "^5.10.0",
     "morgan": "~1.10.0",
     "multer": "^1.4.2",
+    "mysql2": "^2.1.0",
     "nodemailer": "^6.4.11",
-    "passport": "^0.4.0",
+    "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^8.3.0",
+    "pg-hstore": "^2.3.3",
     "pug": "^3.0.0",
+    "redis": "^3.0.2",
+    "sequelize": "^6.3.4",
+    "sequelize-cli": "^6.2.0",
+    "swagger-jsdoc": "^4.0.0",
+    "swagger-ui-express": "^4.1.4",
     "uno-api": "^1.1.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.4",
+    "@babel/cli": "^7.10.5",
     "@babel/core": "^7.11.1",
-    "@babel/node": "^7.7.4",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/node": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.11.0",
     "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/register": "^7.7.7",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.8.3",
+    "@babel/register": "^7.10.5",
     "@babel/runtime": "^7.11.2",
+    "@types/bcrypt": "^3.0.0",
+    "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.7",
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.7",
+    "@types/helmet": "^0.0.47",
+    "@types/http-errors": "^1.6.3",
+    "@types/jsonwebtoken": "^8.3.7",
+    "@types/lodash": "^4.14.159",
+    "@types/mongoose": "^5.7.36",
+    "@types/multer": "^1.4.4",
+    "@types/node": "^14.0.27",
+    "@types/nodemailer": "^6.4.0",
+    "@types/passport": "^1.0.2",
+    "@types/passport-jwt": "^3.0.3",
+    "@types/passport-local": "^1.0.33",
+    "@types/redis": "^2.8.25",
+    "@types/sequelize": "^4.28.8",
+    "@types/swagger-jsdoc": "^3.0.2",
+    "@types/swagger-ui-express": "^4.1.2",
+    "@types/yup": "^0.29.5",
+    "@typescript-eslint/eslint-plugin": "^2.21.0",
+    "@typescript-eslint/parser": "^2.21.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.7.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-babel-module": "^5.1.2",
-    "eslint-plugin-import": "^2.19.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "nodemon": "^2.0.1",
-    "prettier": "^2.0.5"
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.4.0",
+    "nodemon": "^2.0.2",
+    "prettier": "^2.0.5",
+    "supertest": "^4.0.2",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.8.2"
+  },
+  "engines": {
+    "node": ">=10.x"
   }
 }
