fix: env example

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,23 @@
 JWT_SECRET=your_secret_jwt_key
 
+APP_NAME=Api Klinik
+PORT=8000
+
+MONGODB_HOST=127.0.0.1
+MONGODB_PORT=27017
+MONGODB_USERNAME=
+MONGODB_PASSWORD=
+MONGODB_DATABASE=example
+
 MAIL_DRIVER=null
 MAIL_HOST=null
 MAIL_PORT=null
+MAIL_AUTH_TYPE=
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+OAUTH_CLIENT_ID=
+OAUTH_CLIENT_SECRET=
+OAUTH_REDIRECT_URL=
+OAUTH_REFRESH_TOKEN=
