fix: config eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,11 @@
 {
   "extends": ["airbnb-base", "plugin:prettier/recommended"],
-  "plugins": ["prettier"],
+  "plugins": ["prettier", "@typescript-eslint"],
+  "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2018
+    "project": "tsconfig.json",
+    "ecmaVersion": 2018,
+    "createDefaultProgram": true
   },
   "rules": {
     "prettier/prettier": "error",
@@ -13,7 +16,22 @@
     "no-shadow": "off",
     "no-unused-vars": ["error", { "args": "none" }],
     "consistent-return": "off",
-    "no-underscore-dangle": "off"
+    "no-underscore-dangle": "off",
+    "import/prefer-default-export": "off",
+    "import/no-unresolved": "off",
+    "new-cap": "off",
+    "no-new": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never",
+        "mjs": "never"
+      }
+    ]
   },
   "env": {
     "browser": true,
@@ -22,7 +40,14 @@
     "commonjs": true
   },
   "settings": {
+    "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
+    "import/parsers": {
+      "@typescript-eslint/parser": [".ts", ".tsx"]
+    },
     "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      },
       "babel-module": {}
     }
   }
