--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
-[
-  {
-    "editor.formatOnSave": true,
-    "editor.action.formatDocument": "true",
-    "eslint.autoFixOnSave": true,
-    "prettier.eslintIntegration": true
+{
+  "eslint.alwaysShowStatus": true,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
   }
-]
+}
