--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "express-mongoose-typescript",
   "version": "1.1.0",
-  "description": "Just Boilerplate",
+  "description": "Just Boilerplate Express, Mongoose, and TypeScript ( 🦡 ) ",
   "private": true,
   "scripts": {
     "start": "npm run dev",
@@ -17,12 +17,13 @@
     "build:babel": "npm run before-build && babel src --out-dir dist --extensions \".ts\",\".js\"",
     "serve:staging": "NODE_ENV=staging node ./dist/bin/server.js",
     "serve:production": "NODE_ENV=production node ./dist/bin/server.js",
-    "db:migrate": "npx sequelize-cli db:migrate",
-    "db:migrate:fresh": "npx sequelize-cli db:migrate:undo:all && npm run db:migrate",
-    "db:seed": "npx sequelize-cli db:seed:all",
-    "db:drop": "npx sequelize-cli db:drop",
-    "db:reset": "npm run db:drop && npx sequelize-cli db:create && npm run db:migrate && npm run db:seed",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   },
   "author": "masb0ymas",
   "license": "MIT",
@@ -42,24 +43,17 @@
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
-    "mariadb": "^2.2.0",
     "mongoose": "^5.10.0",
     "morgan": "~1.10.0",
     "multer": "^1.4.2",
-    "mysql2": "^2.1.0",
     "nodemailer": "^6.4.11",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.3.0",
-    "pg-hstore": "^2.3.3",
     "pug": "^3.0.0",
     "redis": "^3.0.2",
-    "sequelize": "^6.3.4",
-    "sequelize-cli": "^6.2.0",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
-    "uno-api": "^1.1.0",
     "yup": "^0.29.3"
   },
   "devDependencies": {
@@ -90,7 +84,6 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/redis": "^2.8.25",
-    "@types/sequelize": "^4.28.8",
     "@types/swagger-jsdoc": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/yup": "^0.29.5",
