add: env adminer

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 JWT_SECRET=your_secret_jwt_key
 
+APP_KEY_REDIS=api_mongo_express
 APP_NAME=Api Express
 PORT=8000
 
@@ -21,3 +22,9 @@ OAUTH_CLIENT_ID=
 OAUTH_CLIENT_SECRET=
 OAUTH_REDIRECT_URL=
 OAUTH_REFRESH_TOKEN=
+
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=null
+REDIS_PORT=6379
+
+ADMINER_PORT=8080
