--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "build:babel": "npm run before-build && babel src --out-dir dist --extensions \".ts\",\".js\"",
     "serve:staging": "NODE_ENV=staging node ./dist/bin/server.js",
     "serve:production": "NODE_ENV=production node ./dist/bin/server.js",
+    "serve:production-docker": "NODE_ENV=production pm2-runtime ./dist/bin/server.js",
     "mongo:restore": "mongorestore dump/",
     "mongo:dump": "mongodump --db=${db} --out dump/",
     "test": "echo \"Error: no test specified\" && exit 1"
