--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "author": "masb0ymas",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "~1.4.5",
@@ -57,6 +58,7 @@
     "morgan": "~1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
+    "nodemailer-mailgun-transport": "^2.0.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
@@ -81,6 +83,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
+    "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.8",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.8",
@@ -92,6 +95,7 @@
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.6",
     "@types/nodemailer": "^6.4.0",
+    "@types/nodemailer-mailgun-transport": "^1.4.1",
     "@types/passport": "^1.0.4",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
