--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
 
+MAILGUN_API_KEY=null
+MAILGUN_DOMAIN=null
+
 OAUTH_CLIENT_ID=
 OAUTH_CLIENT_SECRET=
 OAUTH_REDIRECT_URL=
