--- a/package.json
+++ b/package.json
@@ -20,13 +20,8 @@
     "serve:production-docker": "NODE_ENV=production pm2-runtime ./dist/bin/server.js",
     "mongo:restore": "mongorestore dump/",
     "mongo:dump": "mongodump --db=${db} --out dump/",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "jest": {
-    "testEnvironment": "node",
-    "coveragePathIgnorePatterns": [
-      "/node_modules/"
-    ]
+    "test:watch": "jest --watch",
+    "test": "jest"
   },
   "husky": {
     "hooks": {
@@ -89,6 +84,7 @@
     "@types/express": "^4.17.8",
     "@types/helmet": "^4.0.0",
     "@types/http-errors": "^1.8.0",
+    "@types/jest": "^26.0.15",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.164",
     "@types/mongoose": "^5.7.37",
@@ -100,6 +96,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
     "@types/redis": "^2.8.28",
+    "@types/supertest": "^2.0.10",
     "@types/swagger-jsdoc": "^3.0.2",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/yup": "^0.29.9",
