--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "redis": "^3.0.2",
     "swagger-jsdoc": "^5.0.0",
     "swagger-ui-express": "^4.1.4",
+    "winston": "^3.3.3",
     "yup": "^0.29.3"
   },
   "devDependencies": {
@@ -88,6 +89,7 @@
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.165",
     "@types/mongoose": "^5.7.37",
+    "@types/morgan": "^1.9.2",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.6",
     "@types/nodemailer": "^6.4.0",
