--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "mongo:restore": "mongorestore dump/",
     "mongo:dump": "mongodump --db=${db} --out dump/",
     "test": "jest --detectOpenHandles",
-    "test:watch": "jest --detectOpenHandles --watch"
+    "test:watch": "jest --detectOpenHandles --watch",
+    "release": "standard-version"
   },
   "husky": {
     "hooks": {
@@ -115,6 +116,7 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
+    "standard-version": "^9.0.0",
     "supertest": "^6.0.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
