fix: update mongodb auth

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,7 @@ PORT=8000
 
 MONGODB_HOST=127.0.0.1
 MONGODB_PORT=27017
+MONGODB_AUTH=admin
 MONGODB_USERNAME=
 MONGODB_PASSWORD=
 MONGODB_DATABASE=example
