--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "test:watch": "jest --detectOpenHandles --watch",
     "release": "standard-version",
     "release:pre": "npm run release -- --prerelease",
-    "release:minor": "npm run release -- --release-as minor"
+    "release:patch": "npm run release -- --release-as patch",
+    "release:minor": "npm run release -- --release-as minor",
+    "release:major": "npm run release -- --release-as major"
   },
   "husky": {
     "hooks": {
