--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,14 @@
-JWT_SECRET=your_secret_jwt_key
-
 APP_KEY_REDIS=api_mongo_express
 APP_NAME=Api Express
 PORT=8000
+
+AXIOS_TIMEOUT=
+
+JWT_SECRET_ACCESS_TOKEN=your_secret_jwt_key
+JWT_ACCESS_TOKEN_EXPIRED=
+
+JWT_SECRET_REFRESH_TOKEN=your_secret_jwt_key
+JWT_REFRESH_TOKEN_EXPIRED=
 
 MONGODB_HOST=127.0.0.1
 MONGODB_PORT=27017
@@ -11,16 +17,16 @@ MONGODB_USERNAME=
 MONGODB_PASSWORD=
 MONGODB_DATABASE=example
 
-MAIL_DRIVER=null
-MAIL_HOST=null
-MAIL_PORT=null
+MAIL_DRIVER=
+MAIL_HOST=
+MAIL_PORT=
 MAIL_AUTH_TYPE=
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
 
-MAILGUN_API_KEY=null
-MAILGUN_DOMAIN=null
+MAILGUN_API_KEY=
+MAILGUN_DOMAIN=
 
 OAUTH_CLIENT_ID=
 OAUTH_CLIENT_SECRET=
@@ -28,5 +34,5 @@ OAUTH_REDIRECT_URL=
 OAUTH_REFRESH_TOKEN=
 
 REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
+REDIS_PASSWORD=
 REDIS_PORT=6379
