--- a/package.json
+++ b/package.json
@@ -56,12 +56,10 @@
     "lodash": "^4.17.20",
     "mongoose": "^5.10.17",
     "morgan": "~1.10.0",
+    "ms": "^2.1.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16",
     "nodemailer-mailgun-transport": "^2.0.2",
-    "passport": "^0.4.1",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
     "pug": "^3.0.0",
     "redis": "^3.0.2",
     "swagger-jsdoc": "^5.0.1",
@@ -95,13 +93,11 @@
     "@types/lodash": "^4.14.165",
     "@types/mongoose": "^5.10.1",
     "@types/morgan": "^1.9.2",
+    "@types/ms": "^0.7.31",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.10",
     "@types/nodemailer": "^6.4.0",
     "@types/nodemailer-mailgun-transport": "^1.4.2",
-    "@types/passport": "^1.0.4",
-    "@types/passport-jwt": "^3.0.3",
-    "@types/passport-local": "^1.0.33",
     "@types/redis": "^2.8.28",
     "@types/supertest": "^2.0.10",
     "@types/swagger-jsdoc": "^3.0.2",
