--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,14 @@
 APP_KEY_REDIS=api_mongo_express
-APP_NAME=Api Express
+APP_NAME=Api MongoDB Express
 PORT=8000
 
 AXIOS_TIMEOUT=
 
 JWT_SECRET_ACCESS_TOKEN=your_secret_jwt_key
-JWT_ACCESS_TOKEN_EXPIRED=
+JWT_ACCESS_TOKEN_EXPIRED=1d
 
 JWT_SECRET_REFRESH_TOKEN=your_secret_jwt_key
-JWT_REFRESH_TOKEN_EXPIRED=
+JWT_REFRESH_TOKEN_EXPIRED=7d
 
 MONGODB_HOST=127.0.0.1
 MONGODB_PORT=27017
