--- a/package.json
+++ b/package.json
@@ -62,10 +62,12 @@
     "morgan": "~1.10.0",
     "ms": "^2.1.2",
     "multer": "^1.4.2",
+    "node-cron": "^2.0.3",
     "nodemailer": "^6.4.16",
     "nodemailer-mailgun-transport": "^2.0.2",
     "pug": "^3.0.0",
     "redis": "^3.0.2",
+    "slugify": "^1.4.6",
     "swagger-jsdoc": "^6.0.1",
     "swagger-ui-express": "^4.1.5",
     "winston": "^3.3.3",
@@ -100,6 +102,7 @@
     "@types/ms": "^0.7.31",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.20",
+    "@types/node-cron": "^2.0.3",
     "@types/nodemailer": "^6.4.0",
     "@types/nodemailer-mailgun-transport": "^1.4.2",
     "@types/redis": "^2.8.28",
