--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "convert-excel-to-json": "^1.7.0",
     "cookie-parser": "~1.4.5",
     "cors": "^2.8.5",
     "date-fns": "^2.16.1",
@@ -89,6 +90,7 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
+    "@types/convert-excel-to-json": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.8",
     "@types/dotenv": "^8.2.0",
