--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "googleapis": "^67.0.0",
     "handlebars": "^4.7.6",
     "helmet": "^4.4.1",
+    "hpp": "^0.2.3",
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
@@ -62,6 +63,7 @@
     "nodemailer-mailgun-transport": "^2.0.2",
     "pug": "^3.0.0",
     "redis": "^3.0.2",
+    "request-ip": "^2.1.3",
     "slugify": "^1.4.6",
     "swagger-jsdoc": "^6.0.1",
     "swagger-ui-express": "^4.1.5",
@@ -90,6 +92,7 @@
     "@types/exceljs": "^1.3.0",
     "@types/express": "^4.17.11",
     "@types/helmet": "^4.0.0",
+    "@types/hpp": "^0.2.1",
     "@types/http-errors": "^1.8.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
@@ -103,12 +106,13 @@
     "@types/nodemailer": "^6.4.0",
     "@types/nodemailer-mailgun-transport": "^1.4.2",
     "@types/redis": "^2.8.28",
+    "@types/request-ip": "^0.0.35",
     "@types/supertest": "^2.0.10",
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/yup": "^0.29.9",
     "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.14.0",
+    "@typescript-eslint/parser": "^4.15.1",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
