--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -37,7 +37,8 @@
     "browser": true,
     "node": true,
     "es6": true,
-    "commonjs": true
+    "commonjs": true,
+    "jest": true
   },
   "settings": {
     "import/extensions": [".js", ".jsx", ".ts", ".tsx"],
