--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.21.0",
-    "bcrypt": "^5.0.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "convert-excel-to-json": "^1.7.0",
     "cookie-parser": "~1.4.5",
     "cors": "^2.8.5",
-    "date-fns": "^2.17.0",
+    "date-fns": "^2.19.0",
     "debug": "~4.3.1",
     "dotenv": "^8.2.0",
     "exceljs": "^4.2.0",
@@ -55,35 +55,35 @@
     "http-errors": "~1.8.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.11.15",
+    "mongoose": "^5.12.1",
     "morgan": "~1.10.0",
     "ms": "^2.1.2",
     "multer": "^1.4.2",
     "node-cron": "^2.0.3",
-    "nodemailer": "^6.4.16",
+    "nodemailer": "^6.5.0",
     "nodemailer-mailgun-transport": "^2.0.2",
     "pug": "^3.0.1",
     "redis": "^3.0.2",
     "request-ip": "^2.1.3",
     "slugify": "^1.4.7",
-    "swagger-jsdoc": "^6.0.1",
+    "swagger-jsdoc": "6.1.0",
     "swagger-ui-express": "^4.1.5",
     "winston": "^3.3.3",
     "yup": "^0.31.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.0",
-    "@babel/core": "^7.13.8",
-    "@babel/node": "^7.13.0",
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.10",
+    "@babel/node": "^7.13.10",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
-    "@babel/plugin-transform-runtime": "^7.13.9",
-    "@babel/preset-env": "^7.13.9",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
     "@babel/preset-typescript": "^7.13.0",
     "@babel/register": "^7.13.8",
-    "@babel/runtime": "^7.13.9",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "@babel/runtime": "^7.13.10",
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/convert-excel-to-json": "^1.7.0",
@@ -113,23 +113,23 @@
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/yup": "^0.29.9",
-    "@typescript-eslint/eslint-plugin": "^4.16.1",
-    "@typescript-eslint/parser": "^4.16.1",
+    "@typescript-eslint/eslint-plugin": "^4.18.0",
+    "@typescript-eslint/parser": "^4.18.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "eslint": "^7.19.0",
+    "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.1.0",
     "eslint-import-resolver-babel-module": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.1.1",
+    "husky": "^5.1.3",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.0",
     "standard-version": "^9.1.1",
     "supertest": "^6.1.3",
     "ts-node": "^9.0.0",
-    "typescript": "^4.1.2"
+    "typescript": "^4.2.3"
   },
   "engines": {
     "node": ">=10.x"
