--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "helmet": "^4.4.1",
     "hpp": "^0.2.3",
     "http-errors": "~1.8.0",
+    "ioredis": "^4.24.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.1",
@@ -96,6 +97,7 @@
     "@types/helmet": "^4.0.0",
     "@types/hpp": "^0.2.1",
     "@types/http-errors": "^1.8.0",
+    "@types/ioredis": "^4.22.0",
     "@types/jest": "^26.0.20",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/lodash": "^4.14.168",
