--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "nodemailer": "^6.5.0",
     "nodemailer-mailgun-transport": "^2.0.2",
     "pug": "^3.0.1",
+    "rate-limiter-flexible": "^2.2.1",
     "redis": "^3.0.2",
     "request-ip": "^2.1.3",
     "slugify": "^1.4.7",
