--- a/package.json
+++ b/package.json
@@ -56,33 +56,33 @@
     "ioredis": "^4.24.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.12.1",
+    "mongoose": "^5.12.3",
     "morgan": "~1.10.0",
     "ms": "^2.1.2",
     "multer": "^1.4.2",
     "node-cron": "^2.0.3",
     "nodemailer": "^6.5.0",
     "nodemailer-mailgun-transport": "^2.0.2",
-    "pug": "^3.0.1",
+    "pug": "^3.0.2",
     "rate-limiter-flexible": "^2.2.1",
     "redis": "^3.0.2",
     "request-ip": "^2.1.3",
-    "slugify": "^1.4.7",
+    "slugify": "^1.5.0",
     "swagger-jsdoc": "6.1.0",
     "swagger-ui-express": "^4.1.5",
     "winston": "^3.3.3",
-    "yup": "^0.31.0"
+    "yup": "0.31.0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.10",
-    "@babel/core": "^7.13.10",
-    "@babel/node": "^7.13.10",
+    "@babel/cli": "^7.13.14",
+    "@babel/core": "^7.13.14",
+    "@babel/node": "^7.13.13",
     "@babel/plugin-proposal-class-properties": "^7.13.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
     "@babel/plugin-transform-runtime": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-env": "^7.13.12",
     "@babel/preset-typescript": "^7.13.0",
-    "@babel/register": "^7.13.8",
+    "@babel/register": "^7.13.14",
     "@babel/runtime": "^7.13.10",
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
@@ -99,16 +99,16 @@
     "@types/hpp": "^0.2.1",
     "@types/http-errors": "^1.8.0",
     "@types/ioredis": "^4.22.0",
-    "@types/jest": "^26.0.20",
-    "@types/jsonwebtoken": "^8.5.0",
+    "@types/jest": "^26.0.22",
+    "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.168",
-    "@types/mongoose": "^5.10.1",
+    "@types/mongoose": "^5.10.4",
     "@types/morgan": "^1.9.2",
     "@types/ms": "^0.7.31",
     "@types/multer": "^1.4.4",
     "@types/node": "^14.14.25",
     "@types/node-cron": "^2.0.3",
-    "@types/nodemailer": "^6.4.0",
+    "@types/nodemailer": "^6.4.1",
     "@types/nodemailer-mailgun-transport": "^1.4.2",
     "@types/redis": "^2.8.28",
     "@types/request-ip": "^0.0.35",
@@ -116,8 +116,8 @@
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/yup": "^0.29.9",
-    "@typescript-eslint/eslint-plugin": "^4.18.0",
-    "@typescript-eslint/parser": "^4.18.0",
+    "@typescript-eslint/eslint-plugin": "^4.21.0",
+    "@typescript-eslint/parser": "^4.21.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^7.22.0",
     "eslint-config-airbnb-base": "^14.2.1",
@@ -125,7 +125,7 @@
     "eslint-import-resolver-babel-module": "^5.2.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.1.3",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.0",
