fix: add run script generate secret key OTP

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ JWT_ACCESS_TOKEN_EXPIRED=1d
 JWT_SECRET_REFRESH_TOKEN=your_secret_jwt_key
 JWT_REFRESH_TOKEN_EXPIRED=7d
 
+SECRET_OTP=your_secret_otp
+EXPIRED_OTP=5m
+
 URL_CLIENT_STAGING=
 URL_SERVER_STAGING=
 
