--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-APP_KEY_REDIS=api_mongo_express
-APP_NAME=Express Mongoose
+APP_KEY_REDIS=api_matcha_expresso
+APP_NAME=Matcha Expresso
 PORT=8000
 
 AXIOS_TIMEOUT=
