--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "serve:staging": "NODE_ENV=staging node ./dist/bin/server.js",
     "serve:production": "NODE_ENV=production node ./dist/bin/server.js",
     "serve:production-docker": "NODE_ENV=production pm2-runtime ./dist/bin/server.js",
-    "deploy:staging": "npm run build:babel && pm2 reload ecosystem.config.js",
-    "deploy:production": "npm run build:babel && pm2 reload ecosystem.config.js",
+    "deploy": "npm run build:babel && pm2 reload ecosystem.config.js",
     "mongo:restore": "mongorestore dump/",
     "mongo:dump": "mongodump --db=${db} --out dump/",
     "test": "jest --detectOpenHandles",
@@ -43,7 +42,7 @@
     "cors": "^2.8.5",
     "date-fns": "^2.21.1",
     "debug": "~4.3.1",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "exceljs": "^4.2.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
@@ -53,10 +52,10 @@
     "helmet": "^4.6.0",
     "hpp": "^0.2.3",
     "http-errors": "~1.8.0",
-    "ioredis": "^4.27.3",
+    "ioredis": "^4.27.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "mongoose": "^5.12.7",
+    "mongoose": "^5.12.13",
     "morgan": "~1.10.0",
     "ms": "^2.1.2",
     "multer": "^1.4.2",
@@ -86,7 +85,7 @@
     "@babel/runtime": "^7.14.0",
     "@commitlint/cli": "^12.0.1",
     "@commitlint/config-conventional": "^12.0.1",
-    "@types/bcrypt": "^3.0.1",
+    "@types/bcrypt": "^5.0.0",
     "@types/body-parser": "^1.19.0",
     "@types/convert-excel-to-json": "^1.7.0",
     "@types/cookie-parser": "^1.4.2",
@@ -102,11 +101,11 @@
     "@types/jest": "^26.0.22",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/lodash": "^4.14.168",
-    "@types/mongoose": "^5.10.5",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.2",
     "@types/ms": "^0.7.31",
     "@types/multer": "^1.4.4",
-    "@types/node": "^15.0.1",
+    "@types/node": "^15.12.2",
     "@types/node-cron": "^2.0.3",
     "@types/nodemailer": "^6.4.1",
     "@types/nodemailer-mailgun-transport": "^1.4.2",
@@ -116,19 +115,19 @@
     "@types/swagger-jsdoc": "^6.0.0",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/yup": "^0.29.9",
-    "@typescript-eslint/eslint-plugin": "^4.26.0",
-    "@typescript-eslint/parser": "^4.26.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.1",
+    "@typescript-eslint/parser": "^4.26.1",
     "babel-plugin-module-resolver": "^4.0.0",
-    "eslint": "^7.27.0",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-prettier": "^3.3.1",
     "husky": "^6.0.0",
-    "jest": "^27.0.3",
+    "jest": "^27.0.4",
     "nodemon": "^2.0.7",
-    "prettier": "^2.3.0",
+    "prettier": "^2.3.1",
     "standard-version": "^9.3.0",
     "supertest": "^6.1.3",
     "ts-node": "^10.0.0",
