--- a/.versionrc.json
+++ b/.versionrc.json
@@ -9,8 +9,8 @@
     { "type": "perf", "section": "Other Commit" },
     { "type": "test", "hidden": true }
   ],
-  "commitUrlFormat": "https://github.com/masb0ymas/matcha-expresso/commit/{{hash}}",
-  "compareUrlFormat": "https://github.com/masb0ymas/matcha-expresso/compare/{{previousTag}}...{{currentTag}}",
-  "NAME": "matcha-expresso",
+  "commitUrlFormat": "https://github.com/masb0ymas/expresso-mongose/commit/{{hash}}",
+  "compareUrlFormat": "https://github.com/masb0ymas/expresso-mongose/compare/{{previousTag}}...{{currentTag}}",
+  "NAME": "expresso-mongose",
   "VERSION": "1.0.0"
 }
